--- a/assets/scss/components/slider.scss
+++ b/assets/scss/components/slider.scss
@@ -1,7 +1,7 @@
 .slider {
-	background: linear-gradient( rgba(0, 0, 0, 0.5) 100%, rgba(0, 0, 0, 0.5)100%), url("/Waxom/assets/img/slider-bcg.jpg");
+	background: linear-gradient( rgba(0, 0, 0, 0.5) 100%, rgba(0, 0, 0, 0.5)100%), url("/Waxom/assets/img/slider-bcg.jpg") center;
 	background-size: cover;
-	background-position: center;
+	/*background-position: center;*/
 	height: 100vh;
 	display: flex;
 	flex-direction: column;
