--- a/assets/scss/components/recent-posts.scss
+++ b/assets/scss/components/recent-posts.scss
@@ -21,6 +21,33 @@
 		display: flex;
 		flex-direction: column;
 		position: relative;
+		&:hover {
+			.recent-posts__hover {
+				opacity: 1;
+				transition: .3s ease all;
+			}
+			.recent-posts__text {
+				border: 2px solid #362f2d;
+				background-color: #362f2d;
+				transition: .3s ease all;
+			}
+			.recent-posts__title-post {
+				color: #c7b299;
+				transition: .3s ease all;
+			}
+			.recent-posts__info-post {
+				color: #ffffff;
+				transition: .3s ease all;
+			}
+			.recent-posts__day {
+				background-color: #c7b299;
+				transition: .3s ease all;
+			}
+			.recent-posts__month {
+				background-color: #a48d72;
+				transition: .3s ease all;
+			}
+		}
 	}
 	&__photo {
 		height: 220px;
@@ -91,6 +118,7 @@
 		margin-bottom: 0;
 	}
 	&__hover {
+		height: 220px;
 		position: absolute;
 		top: 0;
 		left: 0;
@@ -103,27 +131,5 @@
 		align-items: center;
 		justify-content: center;
 		flex-direction: column;
-		&:hover {
-			opacity: 1;
-			transition: .3s ease all;
-		}
-	}
-	&__text-hover {
-		margin-bottom: 0;
-		margin-top: auto;
-		border: 2px solid #362f2d;
-		background-color: #362f2d;
-	}
-	&__title-post-hover {
-		color: #c7b299;
-	}
-	&__info-post-hover {
-		color: #ffffff;
-	}
-	&__day-hover {
-		background-color: #c7b299;
-	}
-	&__month-hover {
-		background-color: #a48d72;
 	}
 }
